[gd_scene load_steps=2 format=3 uid="uid://dbq0ikbhsjo1v"]

[ext_resource type="Script" uid="uid://bap1q7kkklank" path="res://Scripts/BlackJack/bg_black_jack.gd" id="1_a0i1t"]

[node name="BlackJack" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a0i1t")

[node name="PlayerCount" type="Label" parent="."]
layout_mode = 0
offset_left = 751.0
offset_top = 57.0
offset_right = 1070.0
offset_bottom = 181.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="State" type="Label" parent="."]
layout_mode = 0
offset_left = 425.0
offset_top = 60.0
offset_right = 744.0
offset_bottom = 184.0
text = "Partie en cours"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DealerCount" type="Label" parent="."]
layout_mode = 0
offset_left = 42.0
offset_top = 64.0
offset_right = 361.0
offset_bottom = 188.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DrawButton" type="Button" parent="."]
layout_mode = 0
offset_left = 500.0
offset_top = 323.0
offset_right = 640.0
offset_bottom = 426.0
text = "DRAW"

[node name="StayButton" type="Button" parent="."]
layout_mode = 0
offset_left = 497.0
offset_top = 456.0
offset_right = 637.0
offset_bottom = 559.0
text = "STAY"

[node name="PlayerCardsContainer" type="HBoxContainer" parent="."]
layout_direction = 2
layout_mode = 0
offset_left = 698.0
offset_top = 301.0
offset_right = 1109.0
offset_bottom = 504.0
theme_override_constants/separation = 25

[node name="DealerCardsContainer" type="HBoxContainer" parent="."]
layout_direction = 2
layout_mode = 0
offset_left = 29.0
offset_top = 314.0
offset_right = 440.0
offset_bottom = 517.0
theme_override_constants/separation = 25
